Fix: component and layout spacing

--- a/src/styles/components/_option.scss
+++ b/src/styles/components/_option.scss
@@ -10,6 +10,10 @@
     width: 100%;
     cursor: pointer;
 
+    &__value {
+        max-inline-size: 75%;
+    }
+
     &__letter {
         display: flex;
         justify-content: center;
