--- a/src/styles/pages/_result.scss
+++ b/src/styles/pages/_result.scss
@@ -49,5 +49,6 @@
     .result {
         flex-direction: row;
         gap: var(--space-1800);
+        margin-block-start: var(--space-800);
     }
 }
